@@ -9,52 +9,43 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.coolSchool.CoolSchool.enums.Permission.ADMIN_CREATE;
-import static com.coolSchool.CoolSchool.enums.Permission.ADMIN_DELETE;
-import static com.coolSchool.CoolSchool.enums.Permission.ADMIN_READ;
-import static com.coolSchool.CoolSchool.enums.Permission.ADMIN_UPDATE;
-import static com.coolSchool.CoolSchool.enums.Permission.MANAGER_CREATE;
-import static com.coolSchool.CoolSchool.enums.Permission.MANAGER_DELETE;
-import static com.coolSchool.CoolSchool.enums.Permission.MANAGER_READ;
-import static com.coolSchool.CoolSchool.enums.Permission.MANAGER_UPDATE;
+import static com.coolSchool.CoolSchool.enums.Permission.*;
 
 @Getter
 @RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE,
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  ),
-  MANAGER(
-          Set.of(
-                  MANAGER_READ,
-                  MANAGER_UPDATE,
-                  MANAGER_DELETE,
-                  MANAGER_CREATE
-          )
-  )
+    USER(Collections.emptySet()),
+    ADMIN(
+            Set.of(
+                    ADMIN_READ,
+                    ADMIN_UPDATE,
+                    ADMIN_DELETE,
+                    ADMIN_CREATE,
+                    MANAGER_READ,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE,
+                    MANAGER_CREATE
+            )
+    ),
+    MANAGER(
+            Set.of(
+                    MANAGER_READ,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE,
+                    MANAGER_CREATE
+            )
+    );
 
-  ;
+    private final Set<Permission> permissions;
 
-  private final Set<Permission> permissions;
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        List<SimpleGrantedAuthority> authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
 
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    List<SimpleGrantedAuthority> authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 }
